<resources>
    <string name="app_name">Site Map</string>

    <string name="email">Email</string>
    <string name="app_logo">app Logo</string>
    <string name="auth_text">SignUp/SignIn</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="signin">Sign In</string>
    <string name="site_image">Image site</string>
    <string name="settings_item">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_site_image">Select site image</string>
    <string name="add_image">Add image</string>
    <string name="item_save">Save</string>
    <string name="change_location">Change Location</string>
    <string name="latitude">Lat: %1$.4f</string>
    <string name="longitude">Lng: %1$.4f</string>
    <string name="latlng">Lat: %1$.2f Lng: %2$.2f</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="user_email">Email: %1$s</string>
    <string name="user_pass">Password: %1$s</string>
    <string name="your_stats">Your stats</string>
    <string name="public_sites">Public sites: %1$d</string>
    <string name="private_sites">Private sites: %1$d</string>
    <string name="your_accound">Your account</string>
    <string name="visited_sites">Visited sites: %1$d</string>
    <string name="site_lists">Site Lists</string>
    <string name="visited_in">Visited: %1$s</string>
    <string name="notes">Notes</string>
    <string name="insert_a_note">Insert a note…</string>

    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">almeida@aylton.dev</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="favourites">Favourites</string>
    <string name="sites_map">Sites Map</string>
    <string name="user_image">User Image</string>
    <string name="image_site">image site</string>
    <string name="thumbs_up_icon">thumbs up icon</string>
    <string name="thumbs_down_icon">thumbs down icon</string>
    <string name="icon_favourite">icon favourite</string>
</resources>
