<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.sitesMap.SitesMapView">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintStart_toStartOf="@id/mapView"
        app:layout_constraintTop_toTopOf="@id/mapView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/textLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textLat"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewSite"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/image_site"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/siteName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageViewSite"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewThumbsUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/thumbs_up_icon"
                android:src="@drawable/ic_thumb_up"
                android:tint="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/imageViewSite"
                app:layout_constraintTop_toBottomOf="@id/siteName" />

            <TextView
                android:id="@+id/valueLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewThumbsUp"
                app:layout_constraintStart_toEndOf="@id/imageViewThumbsUp"
                app:layout_constraintTop_toTopOf="@id/imageViewThumbsUp" />

            <ImageView
                android:id="@+id/imageViewThumbsDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/thumbs_down_icon"
                android:src="@drawable/ic_thumb_down"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/imageViewThumbsUp"
                app:layout_constraintStart_toEndOf="@id/valueLikes"
                app:layout_constraintTop_toTopOf="@id/imageViewThumbsUp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/imageViewThumbsDown"
                app:layout_constraintStart_toEndOf="@id/imageViewThumbsDown"
                app:layout_constraintTop_toTopOf="@id/imageViewThumbsDown" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>